--- a/web/themes/hsk_zymphonies/sass/_front.sass
+++ b/web/themes/hsk_zymphonies/sass/_front.sass
@@ -99,6 +99,10 @@
         padding-right: 30px
 
     .views-row
+      &.default-image
+        .image-mobile
+          display: none
+
       +legacy-pie-clearfix
       margin-bottom: 15px
 
