--- a/web/themes/hsk_zymphonies/sass/_node.sass
+++ b/web/themes/hsk_zymphonies/sass/_node.sass
@@ -117,6 +117,12 @@
 
 
 .page-node-type-article
+  article
+    &.node--type-article
+      &.default-image
+        .field--name-field-image
+          display: none
+
   node__content
     +legacy-pie-clearfix
   .field--name-field-image
