Wenn die Darstellunsmethode im View Content statt Fields ist, muss die Klasse etwas anders hinzugefügt werden....

--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2318,6 +2318,9 @@ button.btn:hover, a.btn:hover {
 .path-news .view-news .views-row {
   margin-bottom: 15px;
 }
+.path-news .view-news .views-row.default-image .field--name-field-image {
+  display: none;
+}
 
 .path-mannschaften .view-mannschaften .views-row {
   display: flex;
