--- a/web/themes/hsk_zymphonies/sass/_views.sass
+++ b/web/themes/hsk_zymphonies/sass/_views.sass
@@ -87,6 +87,10 @@
   .view-news
     .views-row
       margin-bottom: 15px
+      &.default-image
+        .field--name-field-image
+          display: none
+
 
 .path-mannschaften
   .view-mannschaften
