--- a/web/themes/hsk_zymphonies/sass/_node.sass
+++ b/web/themes/hsk_zymphonies/sass/_node.sass
@@ -122,6 +122,9 @@
       &.default-image
         .field--name-field-image
           display: none
+      &.main-image-teaser-only
+        .field--name-field-image
+          display: none
 
   node__content
     +legacy-pie-clearfix
