--- a/web/themes/hsk_zymphonies/sass/_node.sass
+++ b/web/themes/hsk_zymphonies/sass/_node.sass
@@ -289,6 +289,10 @@ div#sliding-popup
         box-shadow: none
         color: white
         margin-top: 0.7em
+        border-radius: 6px
+        padding: 4px 8px
+        font-weight: normal
+        margin-right: 0.5em
 
 .field--name-field-pgn-txt-pgn
   .cbreplay
