--- a/web/themes/hsk_zymphonies/sass/_views.sass
+++ b/web/themes/hsk_zymphonies/sass/_views.sass
@@ -212,6 +212,11 @@
         &.views-field-nothing
           display: table-cell
 
+.more-link
+  display: block
+  text-align: right
+  padding-top: 0.5em
+
 
 
 
