Grundsätzliche Klassen für das Main Menu im CSS geändert

--- a/web/themes/hsk_zymphonies/sass/_header.sass
+++ b/web/themes/hsk_zymphonies/sass/_header.sass
@@ -35,7 +35,7 @@ header
 nav#block-hsk-zymphonies-main-menu
   @include legacy-pie-clearfix
   clear: both
-  ul#main-menu
+  ul.menu
     margin: 0
     padding: 0
     li
@@ -204,7 +204,7 @@ nav#block-hsk-footer
 
     nav#block-hsk-zymphonies-main-menu
       +legacy-pie-clearfix
-      ul#main-menu
+      ul.menu
         li
           display: inline
           float: left
