--- a/web/themes/hsk_zymphonies/templates/page.html.twig
+++ b/web/themes/hsk_zymphonies/templates/page.html.twig
@@ -254,7 +254,7 @@
       <div class="row">
 
         <!-- Start Footer First Region -->
-        <div class = {{ footer_first_class }}>
+        <div class = "footer-region footer-first">
           {% if page.footer_first %}
             {{ page.footer_first }}
           {% endif %}
@@ -262,7 +262,7 @@
         <!-- End Footer First Region -->
 
         <!-- Start Footer Second Region -->
-        <div class = {{ footer_class }}>
+        <div class = "footer-region footer-second">
           {% if page.footer_second %}
             {{ page.footer_second }}
           {% endif %}
@@ -270,7 +270,7 @@
         <!-- End Footer Second Region -->
 
         <!-- Start Footer third Region -->
-        <div class = {{ footer_class }}>
+        <div class = "footer-region footer-third">
           {% if page.footer_third %}
             {{ page.footer_third }}
           {% endif %}
@@ -294,7 +294,7 @@
         <div class="row">
 
           <!-- Start Bottom First Region -->
-          <div class = {{ bottom_class }}>
+          <div class = "bottom-region bottom-first">
             {% if page.bottom_first %}
               {{ page.bottom_first }}
             {% endif %}
@@ -302,7 +302,7 @@
           <!-- End Bottom First Region -->
 
           <!-- Start Bottom Second Region -->
-          <div class = {{ bottom_class }}>
+          <div class = "bottom-region bottom-second">
             {% if page.bottom_second %}
               {{ page.bottom_second }}
             {% endif %}
@@ -310,14 +310,14 @@
           <!-- End Bottom Second Region -->
 
           <!-- Start Bottom third Region -->
-          <div class = {{ bottom_class }}>
+          <div class = "bottom-region bottom-third">
             {% if page.bottom_third %}
               {{ page.bottom_third }}
             {% endif %}
           </div>
           <!-- End Bottom Third Region -->
 
-          <div class = {{ bottom_class }}>
+          <div class = "bottom-region bottom-fourth">
             {% if page.bottom_forth %}
               {{ page.bottom_forth }}
             {% endif %}
