Breiten-Begrenzung für .container aus altem Base-Theme übernommen. Können wir ja mal irgendwann breiter machen...

--- a/web/themes/hsk_zymphonies/templates/page.html.twig
+++ b/web/themes/hsk_zymphonies/templates/page.html.twig
@@ -213,7 +213,7 @@
       <!--- Start content -->
       {% if page.content %}
         <div class="content_layout">
-          <div class={{contentlayout}}>
+          <div class='content-layout-inner'>
             {{ page.content }}
           </div>
         </div>
