--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1796,6 +1796,13 @@
     margin-left: 100%;
   }
 }
+@font-face {
+  font-family: "FontAwesome";
+  src: url("../fonts/fontawesome-webfont.eot?v=4.5.0");
+  src: url("../fonts/fontawesome-webfont.eot?#iefix&v=4.5.0") format("embedded-opentype"), url("../fonts/fontawesome-webfont.woff2?v=4.5.0") format("woff2"), url("../fonts/fontawesome-webfont.woff?v=4.5.0") format("woff"), url("../fonts/fontawesome-webfont.ttf?v=4.5.0") format("truetype"), url("../fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 html {
   font-size: 15.5px;
 }
@@ -2092,8 +2099,24 @@ button.btn:hover, a.btn:hover {
   border-bottom: 5px solid #ED8600;
 }
 
+.container {
+  max-width: 1000px;
+}
+
 .content_layout {
   margin-top: 30px;
+}
+.content_layout .content-layout-inner {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  .content_layout .content-layout-inner {
+    float: left;
+    width: 100%;
+  }
 }
 .content_layout .region-content {
   margin-bottom: 40px;
