--- a/web/themes/hsk_zymphonies/sass/_layout.sass
+++ b/web/themes/hsk_zymphonies/sass/_layout.sass
@@ -20,8 +20,13 @@
     +x-rem(font-size, 2)
     border-bottom: 5px solid $primary-color
 
+.container
+  max-width: 1000px
+
 .content_layout
   margin-top: 30px
+  .content-layout-inner
+    +make-md-column(12)
   .region-content
     margin-bottom: 40px
 
