--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1828,6 +1828,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.3;
   margin-top: 0;
   color: black;
+  margin-bottom: 10px;
 }
 
 h2 {
@@ -1973,9 +1974,38 @@ i.icon {
 
 button.btn, a.btn {
   color: #eee;
+  text-decoration: none;
 }
 button.btn:hover, a.btn:hover {
   color: white;
+}
+
+.btn, input[type=submit] {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  background: #333;
+  color: #fff;
+  border: 0;
+  padding: 13px;
+  line-height: 100%;
+  height: 39px;
 }
 
 .align-right {
@@ -1984,6 +2014,10 @@ button.btn:hover, a.btn:hover {
 
 .align-left {
   margin: 5px 15px 5px 0;
+}
+
+.block {
+  margin-bottom: 20px;
 }
 
 /*------------------------------------------- */
