--- a/web/themes/hsk_zymphonies/sass/_base.sass
+++ b/web/themes/hsk_zymphonies/sass/_base.sass
@@ -69,14 +69,46 @@ i.icon
 button, a
   &.btn
     color: #eee
+    text-decoration: none
     &:hover
       color: white
+
+.btn, input[type="submit"]
+  display: inline-block
+  padding: 6px 12px
+  margin-bottom: 0
+  font-size: 14px
+  font-weight: 400
+  line-height: 1.42857143
+  text-align: center
+  white-space: nowrap
+  vertical-align: middle
+  -ms-touch-action: manipulation
+  touch-action: manipulation
+  cursor: pointer
+  -webkit-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
+  background-image: none
+  border: 1px solid transparent
+  border-radius: 4px
+  background: #333
+  color: #fff
+  border: 0
+  padding: 13px
+  line-height: 100%
+  height: 39px
+
 
 .align-right
   margin: 5px 0 5px 15px
 
 .align-left
   margin: 5px 15px 5px 0
+
+.block
+  margin-bottom: 20px
 
 /*------------------------------------------- */
 /*------------------------------------------- */
