--- a/web/themes/hsk_zymphonies/sass/includes/_fonts.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_fonts.sass
@@ -76,6 +76,7 @@ h1, h2, h3, h4, h5, h6
   line-height: 1.3
   margin-top: 0
   color: $black
+  margin-bottom: 10px
 
 h2
   +x-rem(font-size, 1.5)
