--- a/web/themes/hsk_zymphonies/sass/_base.sass
+++ b/web/themes/hsk_zymphonies/sass/_base.sass
@@ -100,6 +100,11 @@ button, a
   line-height: 100%
   height: 39px
 
+input, button, select, textarea
+  padding: 8px
+  border: 1px solid #C7C7C7
+
+
 
 .align-right
   margin: 5px 0 5px 15px
