--- a/web/themes/hsk_zymphonies/sass/includes/_hsk-zymphonies-central.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_hsk-zymphonies-central.sass
@@ -1,12 +1,11 @@
 @import variables
 @import rem-mixin
-@import bootstrap-grid/variables
-@import bootstrap-grid/mixins
-@import bootstrap-grid/grid
 @import colors
-@import bootstrap-grid/_variables.scss
-@import bootstrap-grid/_mixins.scss
-@import bootstrap-grid/_grid.scss
+@import bootstrap-grid/variables
+@import bootstrap-grid/clearfix
+@import bootstrap-grid/grid-mixins
+@import bootstrap-grid/grid-framework
+@import bootstrap-grid/grid
 @import mixins
 @import fonts
 @import style-mixins
