--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2851,6 +2851,9 @@ header:after {
   overflow: hidden;
   visibility: hidden;
 }
+header #block-hsk-zymphonies-branding {
+  display: inline-block;
+}
 header .brand .site-branding__name, header .brand .site-branding__name a {
   line-height: 1.2;
   font-family: "Roboto Slab", serif;
@@ -2982,6 +2985,28 @@ nav#block-hsk-zymphonies-main-menu ul ul ul a, nav#block-hsk-zymphonies-main-men
 }
 nav#block-hsk-zymphonies-main-menu ul ul ul ul a, nav#block-hsk-zymphonies-main-menu ul ul ul ul a:hover, nav#block-hsk-zymphonies-main-menu ul ul ul ul a:focus, nav#block-hsk-zymphonies-main-menu ul ul ul ul a:active {
   border-left-width: 32px;
+}
+
+.navbar-toggle {
+  position: relative;
+  float: right;
+  padding: 9px 10px;
+  margin-top: 8px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  border-radius: 4px;
+  width: 29px;
+  height: 29px;
+  background: url(../images/mobile-menu.svg) no-repeat center center;
+  font-size: 0;
+  line-height: 0;
 }
 
 #block-mobilemenubutton {
