--- a/web/themes/hsk_zymphonies/sass/_header.sass
+++ b/web/themes/hsk_zymphonies/sass/_header.sass
@@ -12,6 +12,8 @@ header
     z-index: 1
   padding-top: 20px
   +legacy-pie-clearfix
+  #block-hsk-zymphonies-branding
+    display: inline-block
   .brand
     .site-branding__name, .site-branding__name a
       line-height: 1.2
@@ -124,6 +126,26 @@ nav#block-hsk-zymphonies-main-menu
             border-left-width: 32px
 
 
+.navbar-toggle
+  position: relative
+  float: right
+  padding: 9px 10px
+  margin-top: 8px
+  margin-right: 15px
+  margin-bottom: 8px
+  background-color: transparent
+  background-image: none
+  border: 1px solid transparent
+  border-top-color: transparent
+  border-right-color: transparent
+  border-bottom-color: transparent
+  border-left-color: transparent
+  border-radius: 4px
+  width: 29px
+  height: 29px
+  background: url(../images/mobile-menu.svg) no-repeat center center
+  font-size: 0
+  line-height: 0
 
 #block-mobilemenubutton
   width: 29px
