--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1255,7 +1255,24 @@ input, button, select, textarea {
 }
 
 .content_layout {
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
   margin-top: 30px;
+}
+.content_layout:before, .content_layout:after {
+  display: table;
+  content: " ";
+}
+.content_layout:after {
+  clear: both;
+}
+@media (min-width: 992px) {
+  .content_layout {
+    float: left;
+    width: 75%;
+  }
 }
 .content_layout .content-layout-inner {
   position: relative;
@@ -1273,63 +1290,82 @@ input, button, select, textarea {
   margin-bottom: 40px;
 }
 
-.sidebar ul#main-menu {
+.sidebar {
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.sidebar:before, .sidebar:after {
+  display: table;
+  content: " ";
+}
+.sidebar:after {
+  clear: both;
+}
+@media (min-width: 992px) {
+  .sidebar {
+    float: left;
+    width: 25%;
+  }
+}
+.sidebar ul.menu {
   margin-bottom: 3em;
 }
-.sidebar ul#main-menu li {
+.sidebar ul.menu li {
   display: block;
   float: none;
   text-transform: uppercase;
   border-bottom: 1px solid #ccc;
   font-family: "Roboto Slab", serif;
 }
-.sidebar ul#main-menu li ul {
+.sidebar ul.menu li ul {
   border: none;
 }
-.sidebar ul#main-menu li ul li {
+.sidebar ul.menu li ul li {
   list-style-type: none;
   list-style-image: none;
   background: none;
 }
-.sidebar ul#main-menu li ul li:last-child {
+.sidebar ul.menu li ul li:last-child {
   border: none;
 }
-.sidebar ul#main-menu li.menu-item--expanded {
+.sidebar ul.menu li.menu-item--expanded {
   list-style-image: none;
   list-style-type: none;
   border-bottom: 0;
 }
-.sidebar ul#main-menu li.menu-item--expanded > a {
+.sidebar ul.menu li.menu-item--expanded > a {
   border-bottom: 1px solid #ccc;
 }
-.sidebar ul#main-menu li.active > a {
+.sidebar ul.menu li.active > a {
   color: #E27500;
   background: none;
 }
-.sidebar ul#main-menu li a {
+.sidebar ul.menu li a {
   color: #888;
   padding: 7px 0 7px 4px;
   display: block;
   hyphens: auto;
 }
-.sidebar ul#main-menu li a:hover {
+.sidebar ul.menu li a:hover {
   text-decoration: none;
   color: #E27500;
   background: none;
   border: none;
 }
-.sidebar ul#main-menu li a.is-active {
+.sidebar ul.menu li a.is-active {
   color: #E27500;
 }
-.sidebar ul#main-menu li ul {
+.sidebar ul.menu li ul {
   display: block;
   position: static;
 }
-.sidebar ul#main-menu li ul li a {
+.sidebar ul.menu li ul li a {
   font-size: 13.175px;
   font-size: 0.85rem;
 }
-.sidebar ul#main-menu li ul li a:before {
+.sidebar ul.menu li ul li a:before {
   content: "•";
   color: #bbb;
   margin-right: 5px;
@@ -2927,27 +2963,51 @@ nav#block-hsk-zymphonies-main-menu ul.menu li ul li ul li a {
   background: #d5d5d5;
 }
 
+nav#block-hsk-zymphonies-main-menu {
+  *zoom: 1;
+  clear: both;
+}
+nav#block-hsk-zymphonies-main-menu:after {
+  content: " ";
+  display: block;
+  height: 0;
+  clear: both;
+  overflow: hidden;
+  visibility: hidden;
+}
 nav#block-hsk-zymphonies-main-menu ul {
   background: white;
+  margin: 0;
+  padding: 0;
 }
 nav#block-hsk-zymphonies-main-menu ul li {
   position: relative;
   border-top: 1px solid rgba(0, 0, 0, 0.05);
   list-style: none;
+  margin: 0;
+  display: block;
+  box-shadow: none;
 }
 nav#block-hsk-zymphonies-main-menu ul li:first-child {
   border-top: 0;
 }
-nav#block-hsk-zymphonies-main-menu ul li a, nav#block-hsk-zymphonies-main-menu ul li a:hover, nav#block-hsk-zymphonies-main-menu ul li a:focus, nav#block-hsk-zymphonies-main-menu ul li a:active {
+nav#block-hsk-zymphonies-main-menu ul li a {
   display: block;
-  background: transparent;
   color: #2b82ac;
   border-left: 8px solid transparent;
-  background: none;
-  background: #FBFBFB;
-}
-nav#block-hsk-zymphonies-main-menu ul li a {
+  background: #f3f3f3;
   border-bottom: 1px solid #EEF0F7;
+  color: #333;
+  padding: 10px 20px;
+  padding-right: 20px;
+  padding-right: 58px;
+  background: #3092c0;
+  line-height: 23px;
+  text-decoration: none;
+  margin: 0;
+}
+nav#block-hsk-zymphonies-main-menu ul li a:hover, nav#block-hsk-zymphonies-main-menu ul li a.highlighted {
+  background: #e5e5e5;
 }
 nav#block-hsk-zymphonies-main-menu ul li a.current {
   background: #006892;
@@ -2966,45 +3026,55 @@ nav#block-hsk-zymphonies-main-menu ul li a span.sub-arrow {
   height: 34px;
   overflow: hidden;
   text-align: center;
-  background: rgba(0, 0, 0, 0.1);
-  color: #999;
   font-size: 22px;
   padding: 5px;
   border-radius: 2px;
-  border: 1px solid #DCDCDC;
-  background: #EFEFEF;
+  background: white;
+  color: #555;
+  border: 1px solid #ccc;
+}
+nav#block-hsk-zymphonies-main-menu ul li a span.sub-arrow:hover {
+  border: 1px solid #aaa;
+  color: white;
+  background: #ED8600;
 }
 nav#block-hsk-zymphonies-main-menu ul ul {
   background: rgba(102, 102, 102, 0.1);
+  display: none;
 }
 nav#block-hsk-zymphonies-main-menu ul ul a, nav#block-hsk-zymphonies-main-menu ul ul a:hover, nav#block-hsk-zymphonies-main-menu ul ul a:focus, nav#block-hsk-zymphonies-main-menu ul ul a:active {
   border-left: 16px solid transparent;
+  padding-left: 25px;
+  background: #e5e5e5;
+  font-size: 14.725px;
+  font-size: 0.95rem;
+}
+nav#block-hsk-zymphonies-main-menu ul ul a:hover, nav#block-hsk-zymphonies-main-menu ul ul a.highlighted, nav#block-hsk-zymphonies-main-menu ul ul a:hover:hover, nav#block-hsk-zymphonies-main-menu ul ul a:hover.highlighted, nav#block-hsk-zymphonies-main-menu ul ul a:focus:hover, nav#block-hsk-zymphonies-main-menu ul ul a:focus.highlighted, nav#block-hsk-zymphonies-main-menu ul ul a:active:hover, nav#block-hsk-zymphonies-main-menu ul ul a:active.highlighted {
+  background: #d5d5d5;
 }
 nav#block-hsk-zymphonies-main-menu ul ul ul a, nav#block-hsk-zymphonies-main-menu ul ul ul a:hover, nav#block-hsk-zymphonies-main-menu ul ul ul a:focus, nav#block-hsk-zymphonies-main-menu ul ul ul a:active {
   border-left-width: 24px;
 }
 nav#block-hsk-zymphonies-main-menu ul ul ul ul a, nav#block-hsk-zymphonies-main-menu ul ul ul ul a:hover, nav#block-hsk-zymphonies-main-menu ul ul ul ul a:focus, nav#block-hsk-zymphonies-main-menu ul ul ul ul a:active {
   border-left-width: 32px;
+  background: #d5d5d5;
 }
 
 .navbar-toggle {
   position: relative;
   float: right;
   padding: 9px 10px;
-  margin-top: 8px;
+  margin-top: 4px;
   margin-right: 15px;
   margin-bottom: 8px;
   background-color: transparent;
   background-image: none;
-  border: 1px solid transparent;
-  border-top-color: transparent;
-  border-right-color: transparent;
-  border-bottom-color: transparent;
-  border-left-color: transparent;
+  border: 1px solid #ccc;
   border-radius: 4px;
-  width: 29px;
-  height: 29px;
+  width: 40px;
+  height: 40px;
   background: url(../images/mobile-menu.svg) no-repeat center center;
+  background-size: 25px 25px;
   font-size: 0;
   line-height: 0;
 }
