--- a/web/themes/hsk_zymphonies/sass/_header.sass
+++ b/web/themes/hsk_zymphonies/sass/_header.sass
@@ -336,7 +336,7 @@ nav#block-hsk-footer
             &.is-active
               background: $primary-color
               color: white
-            &:hover
+            &:hover, &:active, &:focus
               background: $primary-color
               color: white
               text-decoration: none
