--- a/web/themes/hsk_zymphonies/sass/_forms.sass
+++ b/web/themes/hsk_zymphonies/sass/_forms.sass
@@ -43,6 +43,15 @@ form.webform-submission-kontakt-add-form
     input.form-submit
       width: 100%
 
+.user-login-form, .user-form, .user-pass
+  max-width: 500px
+  margin: 40px auto
+  border: 1px solid #ddd
+  padding: 10px 30px
+  background: #fff
+  .form-text
+    width: 100%
+
 
 
 
