--- a/web/themes/hsk_zymphonies/sass/_layout.sass
+++ b/web/themes/hsk_zymphonies/sass/_layout.sass
@@ -25,12 +25,18 @@
 
 .content_layout
   +clearfix
-  +make-md-column(9)
   margin-top: 30px
   .content-layout-inner
     +make-md-column(12)
   .region-content
     margin-bottom: 40px
+
+.no-sidebars
+  .content_layout
+    +make-md-column(12)
+.sidebar-first, .sidebar-second
+  .content_layout
+    +make-md-column(9)
 
 .sidebar
   +clearfix
@@ -45,6 +51,7 @@
       font-family: $roboto-slab
       ul
         border: none
+        margin-bottom: 0
         li
           list-style-type: none
           list-style-image: none
@@ -148,6 +155,9 @@
           a
             display: block
             padding: 4px 20px 4px 0
+
+  .sidebar
+    margin-top: 30px
 
 
 
