Z-Index für Drop-Down-Menü, damit es nicht hinter der Header Slideshow verschwindet.

--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -3360,6 +3360,7 @@ nav#block-hsk-footer ul li a {
     -ms-border-radius: 0 4px 4px 4px;
     -o-border-radius: 0 4px 4px 4px;
     border-radius: 0 4px 4px 4px;
+    z-index: 7;
   }
   header nav#block-hsk-zymphonies-main-menu ul.menu li ul li {
     margin-right: 0;
