--- a/web/themes/hsk_zymphonies/sass/_header.sass
+++ b/web/themes/hsk_zymphonies/sass/_header.sass
@@ -362,6 +362,7 @@ nav#block-hsk-footer
             top: 27px!important
             padding: 8px 0
             +border-radius(0 4px 4px 4px)
+            z-index: 7
             li
               margin-right: 0
               float: none
