--- a/web/themes/hsk_zymphonies/sass/includes/_fonts.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_fonts.sass
@@ -4,11 +4,28 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i)
 
 @font-face
-  font-family: 'FontAwesome'
-  src: url('../fonts/fontawesome-webfont.eot?v=4.5.0')
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.5.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.5.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.5.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.5.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular') format('svg')
-  font-weight: normal
+  font-family: 'Fontawesome'
   font-style: normal
+  font-weight: 400
+  src: url("../fonts/fontawesome/webfonts/fa-solid-900.eot")
+  src: url("../fonts/fontawesome/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../fonts/fontawesome/webfonts/fa-solid-900.woff2") format("woff2"), url("../fonts/fontawesome/webfonts/fa-solid-900.woff") format("woff"), url("../fonts/fontawesome/webfonts/fa-solid-900.ttf") format("truetype"), url("../fonts/fontawesome/webfonts/fa-solid-900.svg#fontawesome") format("svg")
+
+@font-face
+  font-family: 'Fontawesome-Regular'
+  font-style: normal
+  font-weight: 400
+  src: url("../fonts/fontawesome/webfonts/fa-regular-400.eot")
+  src: url("../fonts/fontawesome/webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("../fonts/fontawesome/webfonts/fa-regular-400.woff2") format("woff2"), url("../fonts/fontawesome/webfonts/fa-regular-400.woff") format("woff"), url("../fonts/fontawesome/webfonts/fa-regular-400.ttf") format("truetype"), url("../fonts/fontawesome/webfonts/fa-regular-400.svg#fontawesome") format("svg")
+
+
+@font-face
+  font-family: 'Fontawesome-Brands'
+  font-style: normal
+  font-weight: normal
+  src: url("../fonts/fontawesome/webfonts/fa-brands-400.eot")
+  src: url("../fonts/fontawesome/webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../fonts/fontawesome/webfonts/fa-brands-400.woff2") format("woff2"), url("../fonts/fontawesome/webfonts/fa-brands-400.woff") format("woff"), url("../fonts/fontawesome/webfonts/fa-brands-400.ttf") format("truetype"), url("../fonts/fontawesome/webfonts/fa-brands-400.svg#fontawesome") format("svg")
+
+
 
 
 // Font-Family
