Farbe Description-Text für Autor.

--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2118,6 +2118,7 @@ form.webform-submission-kontakt-add-form input.form-text, form.webform-submissio
   font-size: 0.75rem;
   line-height: 1.6em;
   text-align: left;
+  color: #555;
 }
 
 /*------------------------------------------- */
