--- a/web/themes/hsk_zymphonies/sass/_block.sass
+++ b/web/themes/hsk_zymphonies/sass/_block.sass
@@ -1,11 +1,12 @@
 .block-hsk-news-author
   text-align: center
-  margin-top: 1.7em
+  margin-top: 0.4em
   padding: 0.6em 1em
   border: 1px solid #ddd
   background: #f3f3f3
   .pre-label
-    color: #666
+    color: #777
+    font-size: 0.78rem
   h2.title
     +x-rem(font-size, 1.3)
   .field--name-field-player-image
