--- a/web/themes/hsk_zymphonies/templates/content/node--player--autor-info.html.twig
+++ b/web/themes/hsk_zymphonies/templates/content/node--player--autor-info.html.twig
@@ -1,13 +1,11 @@
-{%
-  set classes = [
+{% set classes = [
   'node',
   'node--type-' ~ node.bundle|clean_class,
   node.isPromoted() ? 'node--promoted',
   node.isSticky() ? 'node--sticky',
   not node.isPublished() ? 'node--unpublished',
   view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
-]
-%}
+] %}
 {{ attach_library('classy/node') }}
 <article{{ attributes.addClass(classes) }}>
 
@@ -15,7 +13,9 @@
   {% if not page %}
     <div class="pre-label">Autor dieser News:</div>
     <h2{{ title_attributes.addClass('title') }}>
-      {{ label }}
+      <a href="{{ url }}" rel="bookmark">
+        {{ label }}
+      </a>
     </h2>
   {% endif %}
   {{ title_suffix }}
