--- a/web/themes/hsk_zymphonies/sass/_front.sass
+++ b/web/themes/hsk_zymphonies/sass/_front.sass
@@ -282,7 +282,7 @@
       +make-md-column(5)
       .views-row
         margin-bottom: 13px
-        .views-field-field-ev-start-time
+        .views-field-field-ev-start-time, .views-field-field-uhrzeit
           .date
             background: #999
             +x-rem(font-size, 0.7)
