--- a/web/themes/hsk_zymphonies/templates/views/views-view-field--events_list--block_1--field_uhrzeit_1.html.twig
+++ b/web/themes/hsk_zymphonies/templates/views/views-view-field--events_list--block_1--field_uhrzeit_1.html.twig
@@ -20,9 +20,12 @@
  * @ingroup themeable
  */
 #}
-Alda geh ab
-{{ row._entity.field.field_ev_date.date }}
-{{ output -}}
+<div class="date">
+  {{ row._entity.fields.field_ev_date.date|date('d.m.Y') }}
+</div>
+<div class="time">
+  {{ row._entity.fields.field_uhrzeit.from|date('H:i') }}
+</div>
 
 
 
