--- a/web/themes/hsk_zymphonies/templates/views/views-view-field--events_list--block_1--field_uhrzeit_1.html.twig
+++ b/web/themes/hsk_zymphonies/templates/views/views-view-field--events_list--block_1--field_uhrzeit_1.html.twig
@@ -21,10 +21,10 @@
  */
 #}
 <div class="date">
-  {{ row._entity.fields.field_ev_date.date|date('d.m.Y') }}
+  {{ row._entity.fields.field_ev_date.date|date('d.m.Y', false, 'Europe/Berlin') }}
 </div>
 <div class="time">
-  {{ row._entity.fields.field_uhrzeit.from|date('H:i') }}
+  {{ row._entity.fields.field_uhrzeit.from|date('H:i', false, 'Europe/Berlin') }}
 </div>
 
 
